Neomades start same stats as advanced rank speaerman and can rank to elite
Skiri speed increased to 12 from 11.5 pierce/hack resistance dexreased .5 each
Spartan spear heros dmg reduced, 12/10.5 (.5 more pierce than other civ spear hero) down from 13/12
new p1 spear tech for sparta from ssystion 200 food 100 wood 50 stone 15 seconds research time, Infantry spearman 5% more dmg 

Krypteia DMG increased lowered to 10% only applies to champions and heros (Non Citizen Soldiers)
Krypteia2 now only applies to (Non Citizen Soldiers)

All civs
Fort range increased to 75, Dmg 9 piece 1 crush, also hopefully added territory range of 50 where buildings wont lose influence
CC range increased to 65, dmg reduced to 7 (from 8)
Town phase increase CC capacity by 5 (25 total) Citizen Health increases 10% (structure increased dmg reduced by 10%)
City phase increases CC capacity by 10 (35 total) Citizen Health increases 10%
Added aura to siege towers, trying to make them a little more accurate.   Decreased range, increased repeat time (they weren't used for shooting projectiles at infantry.)  Increased health, gave them "capture attack" of 10 to see if that helps
Stone throwers now can cause friendly fire dmg (onager included in friendly fire but not other changes), range increased to 2 from 1.5, splace dmg 115 from 120

Han
Han Mangonel increased range by 5 and crush dmg by 20 (They are credited with the trebuchet, stronger version of the catapult)

Kush Archers 10% less repeat time




26.10
Spartans get 1 spartriate, 1 peroci spear pony, 4 women 1 pericoic jav and want Spartiate JR to start each game
increased amount of exp needed for spariates to promote to Olympic champ 250 from 200
spartiates added 5 sec to train time (20 instead of 15)
Perioci spearman now are spariate hoplites, start at rank 2
can unlock and train perioci skrimishers from house, p1 (30 seconds)
can unlock and train helots from house, p2 (30 seconds)
CC javilineers reduced to 8 seconds from 9 seconds