@@ -47,7 +47,7 @@
 			"Count": 4
 		},
 		{
-			"Template": "units/kush/infantry_spearman_b",
+			"Template": "units/kush/infantry_swordsman_b",
 			"Count": 2
 		},
 		{
