@@ -1,9 +1,9 @@
 {
 	"genericName": "Town Phase",
 	"specificName": {
-		"athen": "Kōmopolis"
+		"spart": "Kōmopolis"
 	},
-	"description": "Advances from a small village to a bustling town, ready to expand rapidly. This is the Athenian town phase, where metal gathering rates are boosted because of the 'Silver Owls' bonus.",
+	"description": "Advances from a small village to a bustling town, ready to expand rapidly. This is the Spartan town phase, where Infantry cost 10% less metal but take 5% longer to train.",
 	"cost": {
 		"food": 650,
 		"wood": 650,
@@ -21,9 +21,10 @@
 	"replaces": ["phase_town"],
 	"icon": "town_phase.png",
 	"researchTime": 30,
-	"tooltip": "Advance to Town Phase, which unlocks more entities and technologies. Civic Centers +25% territory influence radius and 25% more garrison capacity. Structures +10% damage and +7 capture points regeneration rate per garrisoned unit. Workers +10% metal gather rate.  All Citizens 10% more health",
+	"tooltip": "Advance to Town Phase, which unlocks more entities and technologies. Civic Centers +25% territory influence radius and 25% more garrison capacity. Structures +10% damage and +7 capture points regeneration rate per garrisoned unit. All Citizens 10% more health.  Infantry cost 10% less metal but spearman take 10% longer to train",
 	"modifications": [
-		{ "value": "ResourceGatherer/Rates/food.ore", "multiply": 1.1, "affects": "Worker" },
+		{ "value": "Cost/Resources/metal", "multiply": 0.9, "affects": "Infantry" },
+		{ "value": "Cost/BuildTime", "multiply": 1.1, "affects": "Spearman" },
 		{ "value": "Capturable/GarrisonRegenRate", "add": 7, "affects": "Structure" },
 		{ "value": "Attack/Ranged/Damage/Pierce", "multiply": 1.1, "affects": "Structure" },
 		{ "value": "TerritoryInfluence/Radius", "multiply": 1.25, "affects": "CivCentre" },
