@@ -15,4 +15,15 @@
     <Actor>structures/kushites/barracks.xml</Actor>
     <FoundationActor>structures/fndn_6x6.xml</FoundationActor>
   </VisualActor>
+   <Trainer>
+    <BatchTimeModifier>0.8</BatchTimeModifier>
+    <Entities datatype="tokens">
+      -units/{civ}/infantry_spearman_b
+      units/{civ}/infantry_swordsman_b
+      units/{civ}/infantry_slinger_b
+      units/{civ}/infantry_archer_b
+      units/{civ}/champion_infantry_archer
+    </Entities>
+  </Trainer>
+
 </Entity>
