@@ -18,7 +18,7 @@
   </Researcher>
   <Trainer>
     <Entities datatype="tokens">
-      units/{civ}/infantry_spearman_b
+      units/{civ}/infantry_swordsman_b
       units/{civ}/infantry_archer_b
       units/{civ}/cavalry_javelineer_b
     </Entities>
