@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<Entity parent="units/kush/infantry_spearman_b">
+<Entity parent="units/kush/infantry_slinger_b">
   <Identity>
     <Rank>Advanced</Rank>
   </Identity>
   <Promotion>
-    <Entity>units/kush/infantry_spearman_e</Entity>
+    <Entity>units/kush/infantry_slinger_e</Entity>
   </Promotion>
   <VisualActor>
-    <Actor>units/kushites/infantry_spearman_a.xml</Actor>
+    <Actor>units/ptolemies/infantry_slinger_a.xml</Actor>
   </VisualActor>
 </Entity>
