@@ -1,0 +1,25 @@
+<?xml version="1.0" encoding="utf-8"?>
+<Entity parent="template_unit_infantry_ranged_slinger">
+  <Builder>
+    <Entities datatype="tokens">
+      structures/kush/pyramid_large
+      structures/kush/temple_amun
+      structures/kush/camp_blemmye
+      structures/kush/camp_noba
+    </Entities>
+  </Builder>
+  <Identity>
+    <Civ>kush</Civ>
+    <SelectionGroupName>units/kush/infantry_slinger_b</SelectionGroupName>
+    <GenericName>Judean Slinger</GenericName>
+    <SpecificName>Hebraikós Sphendonḗtēs</SpecificName>
+    <Icon>units/ptol_infantry_slinger.png</Icon>
+    <RequiredTechnology>phase_town</RequiredTechnology>
+  </Identity>
+  <Promotion>
+    <Entity>units/kush/infantry_slinger_b</Entity>
+  </Promotion>
+  <VisualActor>
+    <Actor>units/ptolemies/infantry_slinger_b.xml</Actor>
+  </VisualActor>
+</Entity>
