@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<Entity parent="units/kush/infantry_spearman_a">
+<Entity parent="units/kush/infantry_slinger_a">
   <Identity>
     <Rank>Elite</Rank>
   </Identity>
   <Promotion disable=""/>
   <VisualActor>
-    <Actor>units/kushites/infantry_spearman_e.xml</Actor>
+    <Actor>units/ptolemies/infantry_slinger_e.xml</Actor>
   </VisualActor>
 </Entity>
