@@ -1,26 +1,0 @@
-<?xml version="1.0" encoding="utf-8"?>
-<Entity parent="template_unit_infantry_melee_spearman">
-  <Builder>
-    <Entities datatype="tokens">
-      structures/kush/pyramid_large
-      structures/kush/temple_amun
-      structures/kush/camp_blemmye
-      structures/kush/camp_noba
-    </Entities>
-  </Builder>
-  <Identity>
-    <Civ>kush</Civ>
-    <Lang>napatan</Lang>
-    <SelectionGroupName>units/kush/infantry_spearman_b</SelectionGroupName>
-    <GenericName>Nubian Spearman</GenericName>
-    <SpecificName>iry-rdwy Nhsyw</SpecificName>
-    <RequiredTechnology>phase_village</RequiredTechnology>
-    <Icon>units/kush_infantry_spearman.png</Icon>
-  </Identity>
-  <Promotion>
-    <Entity>units/kush/infantry_spearman_a</Entity>
-  </Promotion>
-  <VisualActor>
-    <Actor>units/kushites/infantry_spearman_b.xml</Actor>
-  </VisualActor>
-</Entity>
