@@ -12,6 +12,8 @@ Neomades start same stats as advanced rank speaerman and can rank to elite
 Skiri speed increased to 12 from 11.5 pierce/hack resistance dexreased .5 each
 Spartan spear heros dmg reduced, 12/10.5 (.5 more pierce than other civ spear hero) down from 13/12
 new p1 spear tech for sparta from ssystion 200 food 100 wood 50 stone 15 seconds research time, Infantry spearman 5% more dmg 
+Spartan p2, Infantry 10% less metal, spearman 10% more train time
+Spartan p3, Infantry 10% less metal, spearman 15% more train time
 
 Krypteia DMG increased lowered to 10% only applies to champions and heros (Non Citizen Soldiers)
 Krypteia2 now only applies to (Non Citizen Soldiers)
@@ -23,11 +25,16 @@ Town phase increase CC capacity by 5 (25 total) Citizen Health increases 10% (st
 City phase increases CC capacity by 10 (35 total) Citizen Health increases 10%
 Added aura to siege towers, trying to make them a little more accurate.   Decreased range, increased repeat time (they weren't used for shooting projectiles at infantry.)  Increased health, gave them "capture attack" of 10 to see if that helps
 Stone throwers now can cause friendly fire dmg (onager included in friendly fire but not other changes), range increased to 2 from 1.5, splace dmg 115 from 120
+Slingers dmg changed to 12.0 pierce .5 crush instead of 11.5/1.0
 
 Han
 Han Mangonel increased range by 5 and crush dmg by 20 (They are credited with the trebuchet, stronger version of the catapult)
 
-Kush Archers 10% less repeat time
+Kush Archers 10% less repeat time, lowered dmg to 7.0 (from 7.5) but added poison effect
+Kush Phase up p2 workers 5% faster grain gather rate, archers 5% more train time +2 range
+Kush Phase up p3 workers 10% faster grain gather rate, archers 10% more train time + 3 range
+remove spearman from Kush, start with swordman p1
+Cav Jav -2 dmg (16) but add poison effect
 
 
 
